# MCP_PostgreSQL

./: .gitignore  README.md  pyproject.toml
Integret_with_IDE_MCP/: config.py  db.py  intelligent_server.bat  intelligent_server.py  prompts.py  requirements.txt  sql_tools.py
With_CMD/: client.py  config.py  db.py  prompts.py  server.py  sql_tools.py
