[project]
name = "mcp-test"
version = "0.1.0"
description = "MCP client-server to expose local PostgreSQL databases to LLMs via LangChain."
authors = [
    { name = "Anass El Achham", email = "anas.elachham@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

dependencies = [
    "fastmcp>=2.10.6,<3.0.0",
    "psycopg2-binary>=2.9.10,<3.0.0",
    "langchain-mcp-adapters>=0.1.9,<1.0.0",
    "langgraph-prebuilt>=0.5.2,<1.0.0",
    "langgraph (>=0.5.4,<0.6.0)",
    "langchain-google-genai (>=2.1.8,<3.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
